2009-04-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin Adler.

        Testcase to ensure reentry cache correctly unrolls callframe
        when it's destroyed.

        * fast/js/repeat-cached-vm-reentry-expected.txt: Added.
        * fast/js/repeat-cached-vm-reentry.html: Added.
        * fast/js/resources/repeat-cached-vm-reentry.js: Added.

2009-04-17  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Dan Bernstein.
        
        https://bugs.webkit.org/show_bug.cgi?id=25277
        If there is no line wrapping, a caret can leave its containing block but it shouldn't leave its root line box

        * fast/inline/25277-2.html: Added.
        * fast/inline/25277.html: Added.
        * platform/mac/fast/inline/25277-2-expected.checksum: Added.
        * platform/mac/fast/inline/25277-2-expected.png: Added.
        * platform/mac/fast/inline/25277-2-expected.txt: Added.
        * platform/mac/fast/inline/25277-expected.checksum: Added.
        * platform/mac/fast/inline/25277-expected.png: Added.
        * platform/mac/fast/inline/25277-expected.txt: Added.

2009-04-17  Brady Eidson  <beidson@apple.com>

        Reviewed by Mark Rowe

        <rdar://problem/6778137> - Disable post-goback-repost-policy.html until the networking layer allows it to be useful.

        * http/tests/navigation/post-goback-repost-policy.html: Removed.
        * http/tests/navigation/post-goback-repost-policy.html-disabled: Copied from http/tests/navigation/post-goback-repost-policy.html.

2009-04-16  Darin Fisher  <darin@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25223
        REGRESSION: Back button after form submission to the same URL fails to navigate.

        * http/tests/navigation/post-goback-same-url.html: Added.
        * http/tests/navigation/post-goback-same-url-expected.txt: Added.
        * http/tests/navigation/resources/post-goback-same-url.php: Added.
